GH-200 Fixes Dashboard text overflow.

--- a/assets/src/scss/pages/dashboard.scss
+++ b/assets/src/scss/pages/dashboard.scss
@@ -223,11 +223,8 @@
 			span {
 				font-size: 16px;
 				font-weight: 500;
-				white-space: nowrap;
+				min-width: 165px;
 				display: inline-block;
-				text-overflow: ellipsis;
-				max-width: 160px;
-				overflow: hidden;
 			}
 
 			b {
